Atualizacao Home Page e criacao de pasta geral

--- a/codigo-fonte/src/geral/menu/menu.html
+++ b/codigo-fonte/src/geral/menu/menu.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
 
 <head>
@@ -19,7 +18,7 @@
     <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand d-flex nav-link ms-2" href="#">
-                <img src="./homePage/images/logo.svg" alt="Logo" width="40" class="d-inline-block align-text-top">
+                <img src="./logo.svg" alt="Logo" width="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -31,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
+
+                    <!-- Classe active (exemplo acima) serve para informar qual pagina a pessoa está. Colocar na pagina que for editar. -->
+
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projetos</a>
                     </li>
