cabeçalho perfil voluntariado

--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntario.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntario.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand d-flex nav-link ms-2" href="#">
-                <img src="./logo.svg" alt="Logo" width="40" class="d-inline-block align-text-top">
+                <img src="logo.svg" alt="Logo" width="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
