--- a/codigo-fonte/src/loginCadastro/loginCadastro.html
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login e Registro</title>
     <link rel="stylesheet" href="loginCadastro.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.all.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main class="c-main">
@@ -121,5 +126,6 @@
       </div>
     </main>
     <script src="loginCadastro.js"></script>
+    <script src="sweetalert2.all.min.js"></script>
   </body>
 </html>
