:sparkles:feat: Implementa a biblioteca font-awesome e função para mostrar ou não a senha

--- a/codigo-fonte/src/loginCadastro/loginCadastro.html
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.html
@@ -10,6 +10,13 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <main class="c-main">
@@ -46,6 +53,11 @@
                 type="password"
                 class="input-default input-login"
               />
+              <i class="fa-solid fa-eye eye-icon" id="eye-login"></i>
+              <i
+                class="fa-solid fa-eye-slash eye-slash-icon"
+                id="slash-eye-login"
+              ></i>
             </div>
             <span class="error-message"></span>
             <button type="button" class="btn-default btn-login" id="btn-login">
@@ -86,6 +98,11 @@
                 type="password"
                 class="input-default input-register"
               />
+              <i class="fa-solid fa-eye eye-icon" id="eye-register"></i>
+              <i
+                class="fa-solid fa-eye-slash eye-slash-icon"
+                id="slash-eye-register"
+              ></i>
             </div>
             <div class="container-checkboxes">
               <div class="label-checkbox">
