--- a/codigo-fonte/src/loginCadastro/loginCadastro.html
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.html
@@ -32,10 +32,16 @@
         <div class="flip-card-inner">
           <div class="flip-card-front">
             <h1 class="card-front-title">Login</h1>
+            <img
+              src="../../assets/images/login-images/sign-in.svg"
+              alt="Imagem representando um homem fazendo login em um site"
+              class="image-sign-in"
+            />
             <div class="container-label-input">
               <label class="label-default label-login">Email</label>
               <input
                 placeholder="email@gmail.com"
+                maxlength="50"
                 required
                 name="email"
                 type="email"
@@ -50,6 +56,7 @@
                 required
                 name="senha"
                 id="password"
+                maxlength="37"
                 type="password"
                 class="input-default input-login"
               />
@@ -73,6 +80,7 @@
                 required
                 name="nome"
                 id="nameRegister"
+                maxlength="50"
                 type="text"
                 class="input-default input-register"
               />
@@ -83,6 +91,7 @@
                 placeholder="email@gmail.com"
                 required
                 name="email"
+                maxlength="50"
                 id="emailRegister"
                 type="email"
                 class="input-default input-register"
@@ -93,6 +102,7 @@
               <input
                 placeholder="P@ssw0rd"
                 required
+                maxlength="37"
                 id="passwordRegister"
                 name="senha"
                 type="password"
