feat:design menu categorias

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -34,92 +34,123 @@
 <section class="projetos">
 <div class="container">
     <div class="row">
-        <section class="categoria col-3 d-none d-sm-block">
+        <div class="categoria d-none d-md-block col-md-4 col-lg-4 col-xl-4">
             <nav>
                 <h3>Categoria</h3>
                 <ul class="menu_categoria">
-                    <il>Saúde</il>
-                    <il>Educação</il>
-                    <il>Alimentação</il>
-                    <il>Doação</il>
-                    <il>Visitação</il>
-                    <il>Adoção</il>
+                    <li><a href="#" >Saúde</a></li>
+                    <li><a href="#" >Educação</a></li>
+                    <li><a href="#" >Alimentação</a></li>
+                    <li><a href="#" >Doação</a></li>
+                    <li><a href="#" >Visitação</a></li>
+                    <li><a href="#" >Adoção</a></li>
                 </ul>
             </nav>
-        </section>
-        <div class="col-sm-5 col-md-4 col-lg-3">
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
+               <div class="row">
+                    <div class="">
+                        <img src="images/volunteer-01.jpg" class="card-img-top" alt="Fotografia de voluntários">
+                    </div>
+                
+               </div>
                 <article class="card-body card-central">
-                    <h2>Projeto X</h2>
+                    <h3 class="card-title">Ajuda voluntários</h3>
                      <p>
-                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. Veniam eum, at, impedit repellendus a dolor itaque voluptatem rem et, natus ducimus ratione fugit suscipit atque officiis!                
+                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. t suscipit atque officiis!                
                      </p>
                      <a href=# class="card-link btn btn-primary">Link</a>
                 </article>
             </div>
         </div>
-        <div class="col-sm-5 col-md-4 col-lg-3 ">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
+               <div class="row">
+                    <div class="">
+                        <img src="images/volunteer-01.jpg" class="card-img-top" alt="Fotografia de voluntários">
+                    </div>        
+               </div>
                 <article class="card-body card-central">
-                    <h2>Projeto X</h2>
+                    <h3 class="card-title">Ajuda voluntários</h3>
                      <p>
-                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. Veniam eum, at, impedit repellendus a dolor itaque voluptatem rem et, natus ducimus ratione fugit suscipit atque officiis!                
+                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. t suscipit atque officiis!                
                      </p>
                      <a href=# class="card-link btn btn-primary">Link</a>
                 </article>
             </div>
         </div>
-        <div class="col-sm-5 col-md-4 col-lg-3 ">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
+               <div class="row">
+                    <div class="">
+                        <img src="images/volunteer-01.jpg" class="card-img-top" alt="Fotografia de voluntários">
+                    </div>        
+               </div>
                 <article class="card-body card-central">
-                    <h2>Projeto X</h2>
+                    <h3 class="card-title">Ajuda voluntários</h3>
                      <p>
-                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. Veniam eum, at, impedit repellendus a dolor itaque voluptatem rem et, natus ducimus ratione fugit suscipit atque officiis!                
+                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. t suscipit atque officiis!                
                      </p>
                      <a href=# class="card-link btn btn-primary">Link</a>
                 </article>
             </div>
         </div>
-        <div class="col-sm-5 col-md-4 col-lg-3 ">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
+               <div class="row">
+                    <div class="">
+                        <img src="images/volunteer-01.jpg" class="card-img-top" alt="Fotografia de voluntários">
+                    </div>        
+               </div>
                 <article class="card-body card-central">
-                    <h2>Projeto X</h2>
+                    <h3 class="card-title">Ajuda voluntários</h3>
                      <p>
-                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. Veniam eum, at, impedit repellendus a dolor itaque voluptatem rem et, natus ducimus ratione fugit suscipit atque officiis!                
+                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. t suscipit atque officiis!                
                      </p>
                      <a href=# class="card-link btn btn-primary">Link</a>
                 </article>
             </div>
         </div>
-        <div class="col-sm-5 col-md-4 col-lg-3 ">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
+               <div class="row">
+                    <div class="">
+                        <img src="images/volunteer-01.jpg" class="card-img-top" alt="Fotografia de voluntários">
+                    </div>        
+               </div>
                 <article class="card-body card-central">
-                    <h2>Projeto X</h2>
+                    <h3 class="card-title">Ajuda voluntários</h3>
                      <p>
-                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. Veniam eum, at, impedit repellendus a dolor itaque voluptatem rem et, natus ducimus ratione fugit suscipit atque officiis!                
+                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. t suscipit atque officiis!                
                      </p>
                      <a href=# class="card-link btn btn-primary">Link</a>
                 </article>
             </div>
         </div>
-        <div class="col-sm-5 col-md-4 col-lg-3 ">
-            <div class="card">
-                <article class="card-body card-central">
-                    <h2>Projeto X</h2>
-                     <p>
-                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur repellendus commodi. Veniam eum, at, impedit repellendus a dolor itaque voluptatem rem et, natus ducimus ratione fugit suscipit atque officiis!                
-                     </p>
-                     <a href=# class="card-link btn btn-primary">Link</a>
-                </article>
-            </div>
-        </div>
-   
-    </div>
+
+     
 </div>    
 </section>
-<footer class="footer_inf">
-    Footer
-</footer>
+<div class="container">
+    <footer class="footer_inf row align-items-center">
+        <div class="col-6">
+            <ul>
+                <li>Projetos</li>
+                <li>Login</li>
+                <li>Perfil</li>
+            </ul>
+        </div>
+        <div class="col-6">
+            <ul>
+                <li>Belo Horizonte, MG</li>
+                <li>(31) 3344-9999</li>
+                <li>@ProjetoVolunt</li>
+                <li>projetovolunt@gmail.com</li>
+            </ul>
+        </div>
+    </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
