feat:estilização menu superior

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -41,23 +41,11 @@
 
 <div class="custom-container">
     <div class="row">
-        <div class="d-md-none categoria col-sm-12 col-md-4 col-lg-4 col-xl-4 nav ">
-            <nav>
-                <h3 class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Categoria</h3>
-                <ul class="flex-column dropdown-menu">
-                    <li class="dropdown-item"><a class="nav-link"href="#" >Saúde</a></li>
-                    <li class="dropdown-item"><a class="nav-link" href="#" >Educação</a></li>
-                    <li class="dropdown-item"><a class="nav-link" href="#" >Alimentação</a></li>
-                    <li class="dropdown-item"><a class="nav-link" href="#" >Doação</a></li>
-                    <li class="dropdown-item"><a class="nav-link" href="#" >Visitação</a></li>
-                    <li class="dropdown-item"><a class="nav-link" href="#" >Adoção</a></li>
-                </ul>
-            </nav>
-        </div>
+       
 
         <div class="d-none d-md-block categoria col-sm-6 col-md-4 col-lg-4 col-xl-4 nav ">
             <nav>
-                <h3 class="">Categoria</h3>
+                <h3 class="categoria">Categoria</h3>
                 <ul class="">
                     <li class="dropdown-item"><a class="nav-link"href="#" >Saúde</a></li>
                     <li class="dropdown-item"><a class="nav-link" href="#" >Educação</a></li>
@@ -68,6 +56,22 @@
                 </ul>
             </nav>
         </div>
+
+
+        <div class="d-md-none categoria col-sm-12 col-md-4 col-lg-4 col-xl-4 nav ">
+            <nav>
+                <h3 class="btn btn-primary" data-bs-toggle="collapse" href="#collapseCategoria" aria-expanded="false">Categoria</h3>
+                <ul class="collapse" id="collapseCategoria">
+                    <li class="dropdown-item"><a class="nav-link"href="#" >Saúde</a></li>
+                    <li class="dropdown-item"><a class="nav-link" href="#" >Educação</a></li>
+                    <li class="dropdown-item"><a class="nav-link" href="#" >Alimentação</a></li>
+                    <li class="dropdown-item"><a class="nav-link" href="#" >Doação</a></li>
+                    <li class="dropdown-item"><a class="nav-link" href="#" >Visitação</a></li>
+                    <li class="dropdown-item"><a class="nav-link" href="#" >Adoção</a></li>
+                </ul>
+            </nav>
+        </div>
+
 
         <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
