--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md bg-body-tertiary navbar-dark navbar-custom">
+    <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
       <div class="container-fluid rounded-3 mx-3">
         <a class="navbar-brand d-flex nav-link ms-2" href="#">
           <img src="./homePage/images/logo.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
