--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -43,60 +43,65 @@
 
   <main class="container">
 
-    <div class="row title">
-      <div class="col-12 text-center mt-5">
-        <h1 class="text-white">Construindo juntos um mundo melhor</h1>
-        <h6 class="text-white">Fazer o bem nunca foi tão fácil</h6>
+    <div class="card rounded-5 mt-5 pb-4 card-size">
+      <div class="row title">
+        <div class="col-12 text-center mt-5">
+          <h1 class="text-white px-2">Construindo juntos um mundo melhor</h1>
+          <h6 class="text-white px-2">Fazer o bem nunca foi tão fácil</h6>
+        </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-12 mt-3">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
+      <div class="row">
+        <div class="col-12 mt-3">
+
+          <div id="carouselExampleCaptions" class="carousel slide px-3" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./homePage/images/closeup-de-um-apoio-de-maos.jpg" class="d-block w-100 rounded-4" alt="...">
+                <div class="carousel-caption d-block">
+                  <h5>Cuidado e Companhia</h5>
+                  <p>Uma mão amiga, um sorriso afetuoso. Juntos, fazemos a diferença na vida dos nossos idosos.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./homePage/images/group-volunteers-collecting-garbage.jpg"
+                  class="d-block w-100 rounded-4 alt=" ...">
+                <div class="carousel-caption d-block">
+                  <h5>Força Coletiva</h5>
+                  <p>Unindo corações e esforços para transformar o mundo. Juntos, somos a mudança que queremos ver.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./homePage/images/voluntarios-se-unindo-para-organizar-doacoes-para-instituicoes-de-caridade.jpg"
+                  class="d-block w-100 rounded-4" alt="...">
+                <div class="carousel-caption d-block">
+                  <h5>Comunidade em Ação</h5>
+                  <p>Cada ato de limpeza é um passo em direção a um ambiente mais saudável e feliz. Vamos juntos manter
+                    nossa comunidade
+                    limpa e vibrante.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./homePage/images/closeup-de-um-apoio-de-maos.jpg" class="d-block w-100 rounded-3" alt="...">
-              <div class="carousel-caption d-block">
-                <h5>Cuidado e Companhia</h5>
-                <p>Uma mão amiga, um sorriso afetuoso. Juntos, fazemos a diferença na vida dos nossos idosos.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./homePage/images/group-volunteers-collecting-garbage.jpg" class="d-block w-100 rounded-3 alt="
-                ...">
-              <div class="carousel-caption d-block">
-                <h5>Força Coletiva</h5>
-                <p>Unindo corações e esforços para transformar o mundo. Juntos, somos a mudança que queremos ver.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./homePage/images/voluntarios-se-unindo-para-organizar-doacoes-para-instituicoes-de-caridade.jpg" class="d-block w-100 rounded-3"
-                alt="...">
-              <div class="carousel-caption d-block">
-                <h5>Comunidade em Ação</h5>
-                <p>Cada ato de limpeza é um passo em direção a um ambiente mais saudável e feliz. Vamos juntos manter nossa comunidade
-                limpa e vibrante.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
     </div>
