--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -8,6 +8,9 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./homePage/css/reset.css">
   <link rel="stylesheet" href="./homePage/css/style.css">
   <link rel="stylesheet" href="./homePage/css/menu.css">
@@ -42,70 +45,89 @@
   </header>
 
   <main class="container">
-
-    <div class="card rounded-5 mt-5 pb-4 card-size">
-      <div class="row title">
-        <div class="col-12 text-center mt-5">
-          <h1 class="text-white px-2">Construindo juntos um mundo melhor</h1>
-          <h6 class="text-white px-2">Fazer o bem nunca foi tão fácil</h6>
+    <div class="section section-1">
+      <div class="card rounded-5 pb-4">
+        <div class="row title">
+          <div class="col-12 text-center mt-5">
+            <h1 class="text-white px-2">Construindo juntos um mundo melhor</h1>
+            <h6 class="text-white px-2">Fazer o bem nunca foi tão fácil</h6>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-12 mt-3">
+        <div class="row">
+          <div class="col-12 mt-3">
+            <div id="carouselExampleCaptions" class="carousel slide px-3" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                  aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                  aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                  aria-label="Slide 3"></button>
+              </div>
 
-          <div id="carouselExampleCaptions" class="carousel slide px-3" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./homePage/images/closeup-de-um-apoio-de-maos.jpg" class="d-block w-100 rounded-4" alt="...">
-                <div class="carousel-caption d-block">
-                  <h5>Cuidado e Companhia</h5>
-                  <p>Uma mão amiga, um sorriso afetuoso. Juntos, fazemos a diferença na vida dos nossos idosos.</p>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./homePage/images/closeup-de-um-apoio-de-maos.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-block">
+                    <h5>Cuidado e Companhia</h5>
+                    <p>Uma mão amiga, um sorriso afetuoso. Juntos, fazemos a diferença na vida dos nossos idosos.</p>
+                  </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./homePage/images/group-volunteers-collecting-garbage.jpg"
-                  class="d-block w-100 rounded-4 alt=" ...">
-                <div class="carousel-caption d-block">
-                  <h5>Força Coletiva</h5>
-                  <p>Unindo corações e esforços para transformar o mundo. Juntos, somos a mudança que queremos ver.</p>
+                <div class="carousel-item">
+                  <img src="./homePage/images/group-volunteers-collecting-garbage.jpg" class="d-block w-100" alt=" ...">
+                  <div class="carousel-caption d-block">
+                    <h5>Comunidade em Ação</h5>
+                    <p>Cada ato de limpeza é um passo em direção a um ambiente mais saudável e feliz.</p>
+                  </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./homePage/images/voluntarios-se-unindo-para-organizar-doacoes-para-instituicoes-de-caridade.jpg"
-                  class="d-block w-100 rounded-4" alt="...">
-                <div class="carousel-caption d-block">
-                  <h5>Comunidade em Ação</h5>
-                  <p>Cada ato de limpeza é um passo em direção a um ambiente mais saudável e feliz. Vamos juntos manter
-                    nossa comunidade
-                    limpa e vibrante.</p>
+                <div class="carousel-item">
+                  <img
+                    src="./homePage/images/voluntarios-se-unindo-para-organizar-doacoes-para-instituicoes-de-caridade.jpg"
+                    class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-block">
+                    <h5>Força Coletiva</h5>
+                    <p>Unindo corações e esforços para transformar o mundo. Juntos, somos a mudança que queremos ver.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
         </div>
       </div>
     </div>
 
+    <div class="section section-2">
+      <div class="row text-center">
+        <h3 class="text-white mt-4">Alguns de nossos projetos</h3>
+
+        <div class="col-lg-4 col-md-4 col-sm-12 mt-4">
+          <div class="card rounded-5 card-projetos">
+            <img src="./homePage/images/closeup-de-um-apoio-de-maos.jpg" class="rounded-5 pb-2" alt="...">
+            <h4 class="pb-1">Amigo Solidário</h4>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 mt-4">
+          <div class="card rounded-5 card-projetos">
+            <img src="./homePage/images/group-volunteers-collecting-garbage.jpg" class="rounded-5 pb-2" alt="...">
+            <h4 class="pb-1">Abrace com Amor</h4>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 mt-4">
+          <div class="card rounded-5 card-projetos">
+            <img src="./homePage/images/voluntarios-se-unindo-para-organizar-doacoes-para-instituicoes-de-caridade.jpg" class="rounded-5 pb-2" alt="...">
+            <h4 class="pb-1 tittle">Juntos Podemos</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-3">
+        <div class="col text-center">
+          <button class="btn btn-primary">Ver mais</button>
+        </div>
+      </div>
+    </div>
 
   </main>
 
