--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -14,9 +14,18 @@
   <link rel="stylesheet" href="./homePage/css/reset.css">
   <link rel="stylesheet" href="./homePage/css/style.css">
   <link rel="stylesheet" href="./homePage/css/menu.css">
+  <link rel="stylesheet" href="./homePage/css/animation.css">
 </head>
 
 <body>
+  <div class="circle circle-1"></div>
+  <div class="circle circle-2"></div>
+  <div class="circle circle-3"></div>
+  <div class="circle circle-4"></div>
+  <div class="circle circle-5"></div>
+  <div class="circle circle-6"></div>
+  <div class="circle circle-7"></div>
+
   <header>
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
       <div class="container-fluid rounded-3 mx-3">
@@ -44,7 +53,7 @@
     </nav>
   </header>
 
-  <main class="container">
+  <main class="container" id="mainContent">
     <div class="section section-1">
       <div class="card rounded-5 pb-4">
         <div class="row title">
@@ -100,38 +109,41 @@
 
     <div class="section section-2">
       <div class="row text-center">
-        <h3 class="text-white mt-4">Alguns de nossos projetos</h3>
+        <h3 class="text-white">Nossos projetos</h3>
 
-        <div class="col-lg-4 col-md-4 col-sm-12 mt-4">
+        <div class="col-lg-4 col-md-4 col-sm-12 mt-sm-2 mt-md-3">
           <div class="card rounded-5 card-projetos">
             <img src="./homePage/images/closeup-de-um-apoio-de-maos.jpg" class="rounded-5 pb-2" alt="...">
-            <h4 class="pb-1">Amigo Solidário</h4>
+            <h5 class="pb-1">Amigo Solidário</h5>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 mt-4">
+        <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
           <div class="card rounded-5 card-projetos">
             <img src="./homePage/images/group-volunteers-collecting-garbage.jpg" class="rounded-5 pb-2" alt="...">
-            <h4 class="pb-1">Abrace com Amor</h4>
+            <h5 class="pb-1">Abrace com Amor</h5>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 mt-4">
+        <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
           <div class="card rounded-5 card-projetos">
-            <img src="./homePage/images/voluntarios-se-unindo-para-organizar-doacoes-para-instituicoes-de-caridade.jpg" class="rounded-5 pb-2" alt="...">
-            <h4 class="pb-1 tittle">Juntos Podemos</h4>
+            <img src="./homePage/images/voluntarios-se-unindo-para-organizar-doacoes-para-instituicoes-de-caridade.jpg"
+              class="rounded-5 pb-2" alt="...">
+            <h5 class="pb-1 tittle">Juntos Podemos</h5>
           </div>
         </div>
       </div>
 
-      <div class="row mt-3">
+      <div class="row mt-4">
         <div class="col text-center">
-          <button class="btn btn-primary">Ver mais</button>
+          <button class="btn btn-secondary">Ver mais</button>
         </div>
       </div>
     </div>
 
+    <div class="section section-3"></div>
+
   </main>
 
-
+  <script src="./homePage/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
