--- a/codigo-fonte/src/geral/menu/menu.html
+++ b/codigo-fonte/src/geral/menu/menu.html
@@ -1,52 +1,28 @@
-<!doctype html>
-<html lang="en">
+<!-- CODIGO DO MENU ATUALIZADO, NAO ESQUECER DE LINKAR COM O CSS -->
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home Page</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="./menu.css">
-</head>
-
-<body>
-  <header>
-    <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
-      <div class="container-fluid rounded-3 mx-3">
-        <a class="navbar-brand d-flex nav-link ms-2" href="#">
-          <img src="./logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Projetos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Entrar</a>
-            </li>
-          </ul>
-        </div>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
+    <div class="container-fluid rounded-3 mx-3">
+      <a class="navbar-brand d-flex nav-link ms-2" href="#">
+        <img src="./homePage/images/logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projetos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Entrar</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-  </header>
-
-  <main>
-
-  </main>
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+    </div>
+  </nav>
+</header>
