:sparkles: feat: Inclusao section depoimentos

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -91,9 +91,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="./homePage/images/imagem-uniao.jpg"
-                    class="d-block w-100" alt="...">
+                  <img src="./homePage/images/imagem-uniao.jpg" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-block">
                     <h5>Força Coletiva</h5>
                     <p>Unindo corações e esforços para transformar o mundo. Juntos, somos a mudança que queremos ver.
@@ -109,7 +107,7 @@
 
     <div class="section section-2">
       <div class="row text-center">
-        <h3 class="text-white">Nossos projetos</h3>
+        <h3 class="text-white">Alguns de nossos projetos</h3>
 
         <div class="col-lg-4 col-md-4 col-sm-12 mt-sm-2 mt-md-3">
           <div class="card rounded-5 card-projetos">
@@ -125,8 +123,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
           <div class="card rounded-5 card-projetos">
-            <img src="./homePage/images/imagem-uniao.jpg"
-              class="rounded-5 pb-2" alt="...">
+            <img src="./homePage/images/imagem-uniao.jpg" class="rounded-5 pb-2" alt="...">
             <h5 class="pb-1 tittle">Juntos Podemos</h5>
           </div>
         </div>
@@ -139,7 +136,43 @@
       </div>
     </div>
 
-    <div class="section section-3"></div>
+    <div class="section section-3">
+      <h3 class="text-white text-center">Histórias inspiradoras</h3>
+      
+      <div class="card text-center rounded-5 mt-sm-2 mt-md-3">
+        <div class="row">
+          <div class="col-lg-4 col-md-12 col-sm-12 p-4">
+            <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
+            <h5 class="mt-4">Maria Clara</h5>
+            <p class="mt-2 mx-2">"Como voluntário em um abrigo de animais, encontrei um cãozinho assustado e desnutrido. Cuidamos dele, e
+              em
+              pouco tempo, sua cauda balançava de felicidade. Ver sua transformação me mostrou o poder da compaixão e da
+              dedicação."</p>
+          </div>
+          <div class="col-lg-4 col-md-12 col-sm-12 p-4">
+            <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
+            <h5 class="mt-4">Maria Clara</h5>
+            <p class="mt-2 mx-2">"Como voluntária em um lar de idosos, conheci a Dona Rosa, que estava se sentindo solitária. Passamos
+              tempo
+              juntas, ouvindo suas histórias. Ver seu rosto iluminado com a nossa amizade me ensinou sobre a importância
+              da simples presença e atenção."</p>
+          </div>
+          <div class="col-lg-4 col-md-12 col-sm-12 p-4">
+            <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
+            <h5 class="mt-4">Maria Clara</h5>
+            <p class="mt-2 mx-2">"Como voluntária em um projeto de reflorestamento, plantei árvores em uma área degradada. Meses depois,
+              voltei e vi o verde renovado, a vida brotando. Entendi que nosso esforço coletivo pode restaurar a
+              natureza
+              e fazer a diferença."</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section section-4">
+
+    </div>
+
 
   </main>
 
