:sparkles: feat: Correcao responsividade do carrossel em telas menores que 370 pixels

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -94,7 +94,7 @@
                   <img src="./homePage/images/imagem-uniao.jpg" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-block">
                     <h5>Força Coletiva</h5>
-                    <p>Unindo corações e esforços para transformar o mundo. Juntos, somos a mudança que queremos ver.
+                    <p>Unindo corações e esforços para transformar o mundo. Juntos, somos mais fortes.
                     </p>
                   </div>
                 </div>
@@ -138,29 +138,32 @@
 
     <div class="section section-3">
       <h3 class="text-white text-center">Histórias inspiradoras</h3>
-      
+
       <div class="card text-center rounded-5 mt-sm-2 mt-md-3">
         <div class="row">
           <div class="col-lg-4 col-md-12 col-sm-12 p-4">
             <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
             <h5 class="mt-4">Maria Clara</h5>
-            <p class="mt-2 mx-2">"Como voluntário em um abrigo de animais, encontrei um cãozinho assustado e desnutrido. Cuidamos dele, e
+            <p class="mt-2 mx-2">"Como voluntário em um abrigo de animais, encontrei um cãozinho assustado e desnutrido.
+              Cuidamos dele, e
               em
               pouco tempo, sua cauda balançava de felicidade. Ver sua transformação me mostrou o poder da compaixão e da
               dedicação."</p>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12 p-4">
             <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
-            <h5 class="mt-4">Maria Clara</h5>
-            <p class="mt-2 mx-2">"Como voluntária em um lar de idosos, conheci a Dona Rosa, que estava se sentindo solitária. Passamos
+            <h5 class="mt-4">Jonas</h5>
+            <p class="mt-2 mx-2">"Como voluntária em um lar de idosos, conheci a Dona Rosa, que estava se sentindo
+              solitária. Passamos
               tempo
               juntas, ouvindo suas histórias. Ver seu rosto iluminado com a nossa amizade me ensinou sobre a importância
               da simples presença e atenção."</p>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12 p-4">
             <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
-            <h5 class="mt-4">Maria Clara</h5>
-            <p class="mt-2 mx-2">"Como voluntária em um projeto de reflorestamento, plantei árvores em uma área degradada. Meses depois,
+            <h5 class="mt-4">Eduardo</h5>
+            <p class="mt-2 mx-2">"Como voluntária em um projeto de reflorestamento, plantei árvores em uma área
+              degradada. Meses depois,
               voltei e vi o verde renovado, a vida brotando. Entendi que nosso esforço coletivo pode restaurar a
               natureza
               e fazer a diferença."</p>
@@ -169,7 +172,31 @@
       </div>
     </div>
 
-    <div class="section section-4">
+    <!-- <div class="section section-4">
+      <h3 class="text-white text-center">Quem somos</h3>
+
+      <div class="row">
+        <div class="col-lg-8 col-md-8 col-sm-12">
+          <div class="card text-center rounded-5 mt-sm-1 mt-md-2 p-3 pb-1">
+            <p>A trajetória da VoluntaRia é um reflexo da união entre amigos com um desejo compartilhado: tornar o
+              voluntariado
+              envolvente e acessível. Inspirados por experiências marcantes de auxílio ao próximo, decidimos fundir
+              nossa paixão pela
+              solidariedade com a vontade de fazer a diferença.
+              Assim, nasceu a concepção de uma plataforma inovadora,
+              onde cada ação
+              voluntária se torna uma conquista, impulsionando um ciclo virtuoso de ajuda e inclusão.</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <img class="mt-sm-1 mt-md-2" src="./homePage/images/logo-white.svg" alt="">
+        </div>
+      </div> -->
+
+
+    </div>
+
 
     </div>
 
