:sparkles: feat: Atualizacao imagens de perfil section 3 homepage

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -142,8 +142,8 @@
       <div class="card text-center rounded-5 mt-sm-2 mt-md-3">
         <div class="row">
           <div class="col-lg-4 col-md-12 col-sm-12 p-4">
-            <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
-            <h5 class="mt-4">Maria Clara</h5>
+            <img src="./homePage/images/perfil-1.jpeg" alt="">
+            <h5 class="mt-4">Jonas</h5>
             <p class="mt-2 mx-2">"Como voluntário em um abrigo de animais, encontrei um cãozinho assustado e desnutrido.
               Cuidamos dele, e
               em
@@ -151,8 +151,8 @@
               dedicação."</p>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12 p-4">
-            <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
-            <h5 class="mt-4">Jonas</h5>
+            <img src="./homePage/images/perfil-03.jpeg" alt="">
+            <h5 class="mt-4">Maria Clara</h5>
             <p class="mt-2 mx-2">"Como voluntária em um lar de idosos, conheci a Dona Rosa, que estava se sentindo
               solitária. Passamos
               tempo
@@ -160,7 +160,7 @@
               da simples presença e atenção."</p>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12 p-4">
-            <img class="" src="https://fakeimg.pl/400x400/cccccc/909090?text=Volunt." alt="">
+            <img src="./homePage/images/perfil-02.jpeg" alt="">
             <h5 class="mt-4">Eduardo</h5>
             <p class="mt-2 mx-2">"Como voluntária em um projeto de reflorestamento, plantei árvores em uma área
               degradada. Meses depois,
