:sparkles: feat: Inclusao section 4, Quem somos.

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -172,13 +172,20 @@
       </div>
     </div>
 
-    <!-- <div class="section section-4">
+    <div class="section section-4">
       <h3 class="text-white text-center">Quem somos</h3>
 
       <div class="row">
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <div class="card text-center rounded-5 mt-sm-1 mt-md-2 p-3 pb-1">
-            <p>A trajetória da VoluntaRia é um reflexo da união entre amigos com um desejo compartilhado: tornar o
+
+        <div class="col-lg-1 col-md-1 col-sm-none"></div>
+
+        <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center align-items-center">
+          <img class="img-fluid p-4" src="./homePage/images/logo-white.svg" alt="">
+        </div>
+
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="card text-center rounded-5 p-4 pb-2 mt-sm-1 mt-md-2">
+            <p>A VoluntaRia é um reflexo da união entre amigos com um desejo compartilhado: tornar o
               voluntariado
               envolvente e acessível. Inspirados por experiências marcantes de auxílio ao próximo, decidimos fundir
               nossa paixão pela
@@ -189,10 +196,9 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <img class="mt-sm-1 mt-md-2" src="./homePage/images/logo-white.svg" alt="">
-        </div>
-      </div> -->
+        <div class="col-lg-1 col-md-1 col-sm-none"></div>
+
+      </div>
 
 
     </div>
