--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -80,7 +80,9 @@
                   <img src="./homePage/images/imagem-maos.jpg" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-block">
                     <h5>Cuidado e Companhia</h5>
-                    <p>Uma mão amiga, um sorriso afetuoso. Juntos, fazemos a diferença na vida dos nossos idosos.</p>
+                    <p>Uma mão amiga, um sorriso afetuoso. Juntos,
+                      <br> fazemos a diferença na vida dos nossos idosos.
+                    </p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -107,7 +109,7 @@
 
     <div class="section section-2">
       <div class="row text-center">
-        <h3 class="text-white">Alguns de nossos projetos</h3>
+        <h3 class="text-white">Projetos de nossa comunidade</h3>
 
         <div class="col-lg-4 col-md-4 col-sm-12 mt-sm-2 mt-md-3">
           <div class="card rounded-5 card-projetos">
@@ -173,19 +175,17 @@
     </div>
 
     <div class="section section-4">
-      <h3 class="text-white text-center">Quem somos</h3>
+      <h3 class="text-white text-center">Sobre nós</h3>
 
-      <div class="row">
-
-        <div class="col-lg-1 col-md-1 col-sm-none"></div>
-
-        <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center align-items-center">
-          <img class="img-fluid p-4" src="./homePage/images/logo-white.svg" alt="">
-        </div>
-
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="card text-center rounded-5 p-4 pb-2 mt-sm-1 mt-md-2">
-            <p>A VoluntaRia é um reflexo da união entre amigos com um desejo compartilhado: tornar o
+      <div class="card text-center rounded-5 p-3 pb-1 mt-sm-2 mt-md-3">
+        <div class="row align-items-center mx-2">
+          <div class="col-lg-4 col-md-4 col-sm-12">
+            <img class="img-fluid p-4" src="./homePage/images/logo-black.svg" alt="">
+          </div>
+          <div class="col-lg-8 col-md-8 col-sm-12 mt-2">
+            <h5>Unindo Forças para Fazer a Diferença</h5>
+            <p>A VoluntaRia é um reflexo da união entre amigos com um desejo compartilhado:
+              tornar o
               voluntariado
               envolvente e acessível. Inspirados por experiências marcantes de auxílio ao próximo, decidimos fundir
               nossa paixão pela
@@ -195,19 +195,119 @@
               voluntária se torna uma conquista, impulsionando um ciclo virtuoso de ajuda e inclusão.</p>
           </div>
         </div>
-
-        <div class="col-lg-1 col-md-1 col-sm-none"></div>
-
       </div>
-
-
     </div>
-
-
     </div>
-
-
   </main>
+
+  <footer>
+    <!-- Remove the container if you want to extend the Footer to full width. -->
+    <div class="container my-5">
+      <!-- Footer -->
+      <footer class="text-center text-white" style="background-color: #3f51b5">
+        <!-- Grid container -->
+        <div class="container">
+          <!-- Section: Links -->
+          <section class="mt-5">
+            <!-- Grid row-->
+            <div class="row text-center d-flex justify-content-center pt-5">
+              <!-- Grid column -->
+              <div class="col-md-2">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#!" class="text-white">About us</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-2">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#!" class="text-white">Products</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-2">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#!" class="text-white">Awards</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-2">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#!" class="text-white">Help</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-2">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#!" class="text-white">Contact</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row-->
+          </section>
+          <!-- Section: Links -->
+
+          <hr class="my-5" />
+
+          <!-- Section: Text -->
+          <section class="mb-5">
+            <div class="row d-flex justify-content-center">
+              <div class="col-lg-8">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                  distinctio earum repellat quaerat voluptatibus placeat nam,
+                  commodi optio pariatur est quia magnam eum harum corrupti
+                  dicta, aliquam sequi voluptate quas.
+                </p>
+              </div>
+            </div>
+          </section>
+          <!-- Section: Text -->
+
+          <!-- Section: Social -->
+          <section class="text-center mb-5">
+            <a href="" class="text-white me-4">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="text-white me-4">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="text-white me-4">
+              <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="text-white me-4">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="text-white me-4">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="" class="text-white me-4">
+              <i class="fab fa-github"></i>
+            </a>
+          </section>
+          <!-- Section: Social -->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+          © 2020 Copyright:
+          <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
+    </div>
+    <!-- End of .container -->
+  </footer>
 
   <script src="./homePage/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
