:sparkles: feat: Correcao responsividade footer

--- a/codigo-fonte/src/geral/footer/footer.html
+++ b/codigo-fonte/src/geral/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="section text-center text-white pt-3">
+<footer class="text-center text-white pt-3">
     <hr class="my-5" />
     <div class="container">
         <div class="row text-center d-flex justify-content-center">
@@ -26,7 +26,7 @@
         </section>
     </div>
     <hr class="my-5 mb-4" />
-    <div class="text-center p-3 rounded-4" style="background-color: rgba(0, 0, 0, 0.2)">
+    <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
         <h6> © 2023 Copyright: VoluntaRia</h6>
     </div>
 </footer>
