:sparkles: feat: Inclusao de animacoes na homepage

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -24,6 +24,9 @@
   <div class="circle circle-5"></div>
   <div class="circle circle-6"></div>
   <div class="circle circle-7"></div>
+  <div class="circle circle-8"></div>
+  <div class="circle circle-9"></div>
+  <div class="circle circle-10"></div>
 
   <header>
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
@@ -196,7 +199,6 @@
         </div>
       </div>
   </main>
-
 
   <footer class="section text-center text-white">
     <hr class="my-5" />
